// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Tests Buttons can be disabled 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "disabled_button",
    "ControlType": 50000,
    "IsEnabled": false,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "IsEnabled": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
        "TextRangePattern.GetText": "Submit Application",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "disabled_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "disabled_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(249, 249, 249, 77)",
            },
            "Offset": "0, 0, 0",
            "Size": "916, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "0, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "4, 0, 0",
                "Size": "908, 1",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "-4, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "-1, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "-4, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "4, -2, 0",
                "Size": "908, 2",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "0, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "0, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
            ],
          },
        ],
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have accessibility labels 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "accessibilityLabel_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
        "TextRangePattern.GetText": "Submit Application",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "accessibilityLabel_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "accessibilityLabel_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 122, 255, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "916, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "0, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "4, 0, 0",
                "Size": "908, 1",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "-4, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "-1, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "-4, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "4, -2, 0",
                "Size": "908, 2",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "0, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "0, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
            ],
          },
        ],
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have accessibility props 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "accessibility_props",
    "ControlType": 50000,
    "HelpText": "Submit Button",
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
        "TextRangePattern.GetText": "Submit Application",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "accessibility_props",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Comment": "accessibility_props",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, 0, 0",
        "Size": "908, 1",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-1, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, -2, 0",
        "Size": "908, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have accessibility states 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "accessibilityState_button",
    "ControlType": 50000,
    "IsEnabled": false,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "IsEnabled": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
        "TextRangePattern.GetText": "Submit Application",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "accessibilityState_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "accessibilityState_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(249, 249, 249, 77)",
            },
            "Offset": "0, 0, 0",
            "Size": "916, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "0, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "4, 0, 0",
                "Size": "908, 1",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "-4, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "-1, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "-4, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "4, -2, 0",
                "Size": "908, 2",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "0, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Offset": "0, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
            ],
          },
        ],
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have custom colors 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "cancel_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to cancel your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Cancel Application",
        "TextRangePattern.GetText": "Cancel Application",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to cancel your application!",
      "TestId": "cancel_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "cancel_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 59, 48, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "916, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "0, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "4, 0, 0",
                "Size": "908, 1",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "-4, 0, 0",
                "Size": "4, 4",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "-1, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "-4, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "4, -2, 0",
                "Size": "908, 2",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "0, -5, 0",
                "Size": "4, 5",
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Offset": "0, 4, 0",
                "Size": "1, 28",
                "Visual Type": "SpriteVisual",
              },
            ],
          },
        ],
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have custom focusable and accessible props 1`] = `
{
  "Automation Tree": {},
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "accessible_false_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Comment": "accessible_false_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, 0, 0",
        "Size": "908, 1",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-1, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, -2, 0",
        "Size": "908, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have custom focusable and accessible props 2`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "focusable_false_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Button with focusable=false",
        "TextRangePattern.GetText": "Button with focusable=false",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "focusable_false_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Comment": "focusable_false_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, 0, 0",
        "Size": "908, 1",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-1, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, -2, 0",
        "Size": "908, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have custom focusable and accessible props 3`] = `
{
  "Automation Tree": {},
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "accessible_focusable_false_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Comment": "accessible_focusable_false_button",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, 0, 0",
        "Size": "908, 1",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-1, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, -2, 0",
        "Size": "908, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have flexbox styling 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "two_button_container",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "two_cancel_button",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Press to cancel your application!",
        "__Children": [
          {
            "AnnotationPattern.TypeId": 60000,
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Cancel",
            "TextRangePattern.GetText": "Cancel",
          },
        ],
      },
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "two_submit_button",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Press to submit your application!",
        "__Children": [
          {
            "AnnotationPattern.TypeId": 60000,
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Submit",
            "TextRangePattern.GetText": "Submit",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "two_button_container",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "AccessibilityLabel": "Press to cancel your application!",
          "TestId": "two_cancel_button",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "AccessibilityLabel": "Press to submit your application!",
          "TestId": "two_submit_button",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "two_button_container",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "59, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Comment": "two_cancel_button",
            "Offset": "0, 0, 0",
            "Size": "59, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "59, 37",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(255, 59, 48, 255)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "59, 37",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, 0, 0",
                        "Size": "51, 1",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-1, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, -2, 0",
                        "Size": "51, 2",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "9, 9, 0",
                "Size": "41, 20",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "41, 20",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "854, 0, 0",
        "Size": "62, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Comment": "two_submit_button",
            "Offset": "0, 0, 0",
            "Size": "62, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "62, 37",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(52, 199, 89, 255)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "62, 37",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, 0, 0",
                        "Size": "54, 1",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-1, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, -2, 0",
                        "Size": "54, 2",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "9, 9, 0",
                "Size": "44, 20",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "44, 20",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons can have flexbox styling with three buttons 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "three_button_container",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "three_cancel_button",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Press to cancel your application!",
        "__Children": [
          {
            "AnnotationPattern.TypeId": 60000,
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Cancel",
            "TextRangePattern.GetText": "Cancel",
          },
        ],
      },
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "three_save_button",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Press to save your application!",
        "__Children": [
          {
            "AnnotationPattern.TypeId": 60000,
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Save For Later",
            "TextRangePattern.GetText": "Save For Later",
          },
        ],
      },
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "three_submit_button",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Press to submit your application!",
        "__Children": [
          {
            "AnnotationPattern.TypeId": 60000,
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Submit",
            "TextRangePattern.GetText": "Submit",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "three_button_container",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "AccessibilityLabel": "Press to cancel your application!",
          "TestId": "three_cancel_button",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "AccessibilityLabel": "Press to save your application!",
          "TestId": "three_save_button",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "AccessibilityLabel": "Press to submit your application!",
          "TestId": "three_submit_button",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "three_button_container",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "59, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Comment": "three_cancel_button",
            "Offset": "0, 0, 0",
            "Size": "59, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "59, 37",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(255, 59, 48, 255)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "59, 37",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, 0, 0",
                        "Size": "51, 1",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-1, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, -2, 0",
                        "Size": "51, 2",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "9, 9, 0",
                "Size": "41, 20",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "41, 20",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "404, 0, 0",
        "Size": "105, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Comment": "three_save_button",
            "Offset": "0, 0, 0",
            "Size": "105, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "105, 37",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(0, 122, 255, 255)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "105, 37",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, 0, 0",
                        "Size": "97, 1",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-1, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, -2, 0",
                        "Size": "97, 2",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "9, 9, 0",
                "Size": "87, 20",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "87, 20",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "854, 0, 0",
        "Size": "62, 37",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Comment": "three_submit_button",
            "Offset": "0, 0, 0",
            "Size": "62, 37",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "62, 37",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(52, 199, 89, 255)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "62, 37",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, 0, 0",
                        "Size": "54, 1",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, 0, 0",
                        "Size": "4, 4",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-1, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "-4, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "4, -2, 0",
                        "Size": "54, 2",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, -5, 0",
                        "Size": "4, 5",
                        "Visual Type": "SpriteVisual",
                      },
                      {
                        "Brush": {
                          "Brush Type": "ColorBrush",
                          "Color": "rgba(0, 0, 0, 41)",
                        },
                        "Offset": "0, 4, 0",
                        "Size": "1, 28",
                        "Visual Type": "SpriteVisual",
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "9, 9, 0",
                "Size": "44, 20",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "44, 20",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`Button Tests Buttons have default styling 1`] = `
{
  "Automation Tree": {
    "AnnotationPattern.TypeId": 60000,
    "AutomationId": "button_default_styling",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
    "__Children": [
      {
        "AnnotationPattern.TypeId": 60000,
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
        "TextRangePattern.GetText": "Submit Application",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Press to submit your application!",
      "TestId": "button_default_styling",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Comment": "button_default_styling",
    "Offset": "0, 0, 0",
    "Size": "916, 37",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, 0, 0",
        "Size": "908, 1",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, 0, 0",
        "Size": "4, 4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-1, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "-4, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "4, -2, 0",
        "Size": "908, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, -5, 0",
        "Size": "4, 5",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Offset": "0, 4, 0",
        "Size": "1, 28",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "9, 9, 0",
        "Size": "898, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "898, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;
